# the-milk-project

./: .gitignore  README.md  SETUP.md
DEMO/milkcoded/src/: database.rs  main.rs
DEMO/milkserver/: schema.sql
backend/: app.py  database_test.py  entrypoint.py
backend/database/: database.py  validation.py
backend/database/additives/: additives.py
backend/database/milk/: addMilk.py  milk.py  viewMilk.py
backend/database/psql/: restart.sql  schema.sql  test_data.sql
backend/database/tables/: additives.py  family.py  milk.py  staff.py
backend/routes/: routes.py
backend/tests/: database_test.py  util_test.py
backend/utils/: constants.py  expiry.py  label.py  label_maker.py  logger_config.py  qr_code.py
frontend/: index.html  its-a-match.html  log-milk-info.html  log-milk-mum.html  log-milk-nurse.html  log-patient-baby.html  matcher.html  not-a-match.html  scanner.html
frontend/src/: api.js  global.js  log-milk-mum.js  log-milk.js  match-result.js  matcher.js  util.js
frontend/static/src/: api.js  config.js  global.js  log-milk-info.js  log-milk-mum.js  log-milk-nurse.js  (+2 more)
frontend/styles/: global.css  index.css  log-patient-baby.css  match.css  matcher.css
milkcoded/: Cargo.toml
milkcoded/src/: database.rs  detection.rs  encode.rs  main.rs
milkcoded/src/test_data/: invariants.rs  label.rs  mod.rs  validation.rs
website/: package-lock.json
website/frontend/: index.html  its-a-match.html  not-a-match.css
website/kelly_demo/: backend.py  backup.sql  backup_script  database.sql  package.json  setup  test.py
website/templates/: its-a-match.css
(+10 files in other folders)
