[package]
name = "milkcoded"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bardecoder = "0.5.0"
image = "0.24"
log = "0.4.22"
qrcodegen = "1.8.0"
sqlx = "0.8.2"
nokhwa = { version = "0.10.4", default-features = false, features = ["input-native", "flume"] }

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
