[package]
name = "milkcoded"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
image = "0.24"
log = "0.4.22"
qrcodegen = "1.8.0"
sqlx = "0.8.2"
chrono = "0.4.38"
simplelog = "0.12.2"
bardecoder = "0.5.0"
rusttype = "0.9"
imageproc = "0.25.0"
ab_glyph = "0.2.28"
usvg = "0.44.0"
resvg = "0.44.0"
rustyline = "14.0.0"
terminal-fonts = "0.1.0"
kamera = "0.0.2"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
